--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,2 @@
-API_KEY = ncygvR1JPAjcud5IkDGht691aVBgGwro
+REACT_APP_API_KEY="ncygvR1JPAjcud5IkDGht691aVBgGwro"
+REACT_APP_BASE_API="https://api.nytimes.com/svc/mostpopular/v2/viewed"
