--- a/package.json
+++ b/package.json
@@ -67,7 +67,9 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "coverage": "jest --collect-coverage"
+    "coverage": "jest --collect-coverage",
+    "cypress:open": "NODE_ENV=test cypress open",
+    "cypress:run": "NODE_ENV=test cypress run"
   },
   "eslintConfig": {
     "extends": [
@@ -142,5 +144,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "cypress": "^13.6.4"
   }
 }
