test files ignored

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,16 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": [
+      "@testing-library/jest-dom"
+    ],
   },
   "include": [
     "cypress",
     "src"
+  ],
+  "exclude": [
+    "src/**/*.test.tsx"
   ]
 }
